--- a/stow/waybar/.config/waybar/style.css
+++ b/stow/waybar/.config/waybar/style.css
@@ -1,13 +1,23 @@
 @import "../omarchy/current/theme/waybar.css";
 
 * {
-  background-color: transparent;
   color: @foreground;
   border: none;
   border-radius: 0;
   min-height: 0;
   font-family: CaskaydiaMono Nerd Font;
   font-size: 12px;
+}
+
+window#waybar {
+  background-color: transparent ;
+}
+
+tooltip {
+  background-color: @background;
+  color: @foreground;
+  border: 1px solid;
+  padding: 6px 8px;
 }
 
 .modules-left {
@@ -77,6 +87,20 @@ tooltip {
 #custom-sunset { margin: 0 7.5px; min-width: 12px; }
 #custom-sunset.active   { color: #e0a96d; } /* warm tint when ON */
 #custom-sunset.inactive { opacity: 0.75; }
+
+#tray:hover,
+#cpu:hover,
+#battery:hover,
+#network:hover,
+#bluetooth:hover,
+#pulseaudio:hover,
+#custom-omarchy:hover,
+#custom-screenrecording-indicator:hover,
+#custom-update:hover,
+#power-profile:hover,
+#workspaces button:hover {
+  background-color: @background;
+}
 
 /* Group containers look like separate pills */
 .modules-left,
