--- a/themes/rose-pine-dark/walker.css
+++ b/themes/rose-pine-dark/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #e0def4;
+@define-color selected-text #3e8fb0;
 @define-color text #6e6a86;
-@define-color base #191724;
-@define-color border #524f67;
+@define-color base #393552;
+@define-color border #3e8fb0;
 @define-color foreground #e0def4;
 @define-color background #191724;
