--- a/themes/rose-pine-light/walker.css
+++ b/themes/rose-pine-light/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #88C0D0;
+@define-color selected-text #b4637a;
 @define-color text #575279;
-@define-color base #faf4ed;
-@define-color border #575279;
+@define-color base #f2e9e1;
+@define-color border #b4637a;
 @define-color foreground #575279;
 @define-color background #faf4ed;
